# hexafe-groupstats

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-candidate.yml
docs/: api_examples.md  architecture.md  migration_from_metroliza.md  native_backend_plan.md  release_testing_0.1.0rc1.md  release_testing_0.1.0rc2.md
src/hexafe_groupstats/: __init__.py  api.py  config.py
src/hexafe_groupstats/adapters/: __init__.py  metroliza.py  pandas.py  rows.py
src/hexafe_groupstats/core/: __init__.py  assumptions.py  capability.py  confidence_intervals.py  corrections.py  descriptive.py  distribution.py  effect_sizes.py  engine.py  omnibus.py  pairwise.py  posthoc.py  preprocess.py  simulation.py
src/hexafe_groupstats/domain/: __init__.py  enums.py  models.py  result_models.py
src/hexafe_groupstats/native/: __init__.py  backends.py  protocols.py  python_backend.py  rust_backend_stub.py
src/hexafe_groupstats/policy/: __init__.py  analysis_policy.py  diagnostics.py  insights.py  spec_comparability.py
tests/: test_core_analysis.py  test_import_and_backend.py  test_insights.py  test_policy_and_adapters.py
