[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexafe-groupstats"
version = "0.1.0"
description = "Standalone reusable group comparison and statistical analysis engine extracted from Metroliza concepts."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hexafe"},
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
pandas = [
  "pandas>=1.5",
]
dev = [
  "pytest>=8.0",
  "pandas>=1.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
